# obligence1

./: .gitignore  README.md  package-lock.json  package.json  pnpm-lock.yaml
.github/workflows/: sync.yaml
apps/backend/: .dockerignore  .gitignore  DOCKER_README.md  Dockerfile  docker-compose.yml  monitor.sh  pyproject.toml  requirements-prod.txt  requirements.txt  setup-ssl.sh  start.sh
apps/backend/app/: agent.py  config.py  main.py  models.py  schemas.py
apps/backend/app/tools/: analyze_job.py  pdf_file.py  plan_builder.py  prompts.py
apps/backend/models/: contract.py
apps/backend/nginx/: nginx.conf
apps/backend/nginx/conf.d/: agent.kyrexi.tech.conf  alfa.kyrexi.tech.conf  initial.conf
apps/backend/utils/: db.py  s3.py
apps/frontend/: README.md  package.json
apps/frontend/src/: auth.ts  middleware.ts
apps/frontend/src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
apps/frontend/src/app/api/clarifications/: route.ts
apps/frontend/src/app/dashboard/: layout.tsx  page.tsx
apps/frontend/src/app/login/: page.tsx
apps/frontend/src/app/signup/: page.tsx
apps/frontend/src/components/: hero.tsx
apps/frontend/src/components/auth/: auth-form.tsx  credentials-form.tsx  signin-button.tsx
apps/frontend/src/components/dashboard/: glowing-cards.tsx  profileCard.tsx  search.tsx  settings.tsx  sidebar.tsx
apps/frontend/src/components/landing/: features.tsx  hero.tsx
apps/frontend/src/components/ui/: button.tsx  card-carousel.tsx  cta.tsx  footer.tsx  navbar.tsx  sidebar.tsx  timeline.tsx
apps/frontend/src/types/: report.type.ts
(+12 files in other folders)
